--- a/thesis/bitr/infer.tex
+++ b/thesis/bitr/infer.tex
@@ -53,12 +53,12 @@ By taking the conjunction of constraints formed like this, we can express any pa
 However, one of the unique parts of this particular typing problem is that some of our functions (especially +) have multiple interpretations which cannot be conveniently formed into a single type. For example, it is unclear whether $x$ is a number or pointer in the expression $x + 2$, and as a result, the type of $x + 2$ is unclear.
 This forces us to either consider intersection types~\cite{Jim1995,Shao1993} or use a disjunction of constraints per statement. In the intersection typing approach, the system generates as complete a type as possible for each variable. For example, if we were trying to type a function $f(x) = x + 2$, the type would be similar to $f : (\mathrm{int} \rightarrow \mathrm{int}) \wedge (\mathrm{ptr}(r@n) \rightarrow \mathrm{ptr}(r@(n+2)))$. While this approach initially seems more elegant, as it allows more complete descriptions of a piece of code, even inference of well-behaved code can quickly become exponential both in the time taken, and in the size of the result type. Instead, we opt to generate a disjunction of constraints for statements which include expressions which would require intersection typing for a most general type. As long as we are satisfying one constraint, the expression will be legal, and in practice, operations like $+$ are not used for different purposes in the same generated code. This approach leaves out some possible typings (e.g. if whether a variable is a pointer or an integer is unclear, the system will end up needing to select one) and makes a small number of programs no longer legal (for example, a non-builtin plus function used both for pointer arithmetic and for integer math). Additionally, the choice to use constraints will make our search problem (in terms of finding which interpretations work) more tractable than inference would be in the intersection typing case. As a result, a statement's constraint ($\sconstr$) is encoded as a disjunction of conjunctions of the core constraint type ($\constr$). In order to describe the entire program, we take the conjunction of all the statement constraints and solve the result.
 
-As each of these constraints are generated separately, in a datalog-based system their generation could be represented as an external predicate on a single rule.
+As each of these constraints are generated separately, in a Datalog-based system their generation could be represented as an external predicate on a single rule.
 This rule could generate a separate fact for each possible disjunction for an IL statement, or a single no-op constraint for instructions which would normally not have yielded one.
 
-\subsubsection{Interprocedural Constraints}
-%Interprocedural
-The basics of interprocedural analysis are straightforwards in this system. We use unique variables when lifting each function and store them in a table. On a function call, we look up the target function's input registers, and say that their types must be a supertype of the type of those same registers at the event of function call. Next, we process the output registers similarly, applying subtyping constraints here instead. There are two issues here, both deriving from the stack: pointer super/subtyping and stack slot re-use. The first issue occurs when applying a supertyping to the stack register upon a call. The stack register's struct will then include temporaries from the callee. This will work fine, until two functions are called in sequence with incompatible local stacks. This will cause an issue because the stack is now constrained to have incompatible uses of stack slots beneath the caller's stack.
+\subsubsection{Inter-procedural Constraints}
+%Inter-procedural
+The basics of inter-procedural analysis are straightforwards in this system. We use unique variables when lifting each function and store them in a table. On a function call, we look up the target function's input registers, and say that their types must be a supertype of the type of those same registers at the event of function call. Next, we process the output registers similarly, applying subtyping constraints here instead. There are two issues here, both deriving from the stack: pointer super/subtyping and stack slot re-use. The first issue occurs when applying a supertyping to the stack register upon a call. The stack register's struct will then include temporaries from the callee. This will work fine, until two functions are called in sequence with incompatible local stacks. This will cause an issue because the stack is now constrained to have incompatible uses of stack slots beneath the caller's stack.
 
 The second issue is that compilers will commonly re-use stack slots for calling functions, so if the program calls functions with incompatible inputs in sequence, the stack will be ill-typed. The easiest approach is to simply assume that your stack register has lost all meaning post function call, and re-infer the relevant portions based on its use after that. However, this will be dropping potentially useful information. A slightly more sophisticated approach would be to try to identify function call prologues and pull the stack type from before them. Unfortunately, that approach would be compiler specific.
 
@@ -66,7 +66,7 @@ Instead, we add the ability to erase type variables from regions after a functio
 
 \subsubsection{Examples}
 %Examples
-One example of a simple constraint generation would be for a multiplication. If we have the a fragment of code in the IL $X_1:64 = X_0:64 * 3$, we are dealing with the simpler case of a non-intersecting expression. We know the exact bitwidth of $X_0$ and $X_1$ from the lifting process. Assuming that $X_0$ and $X_1$ correspond to the type variables $\tau_0$ and $\tau_1$ respectively, we would generate the constraint $(\tau_0 \subt \tint{64}) \wedge (\tint{64} \subt \tau_1)$. Note that these constraints are only one-sided subtypings. $X_0$ is only constrained to be usable as an integer. For all we know $X_0$ could have been a pointer, and this would still be legal. $X_1$ on the other hand must be definable by an integer. As a result, if $X_1$ is later dereferenced, the system will find this to be inconsistent. In a slightly more complex example, we examine $Y_1:64 = Y_0:64 + 8$ in a system with 64-bit pointers. In this case, this statement needs to generate two possibilities --- one assuming that addition is an operation over integers, and one assuming the addition describes pointer arithmetic. Assuming type variables similar to previous example, we end up with a constraint $((\tau_0 \subt \tint{64}) \wedge (\tint{64} \subt \tau_1)) \vee ((\tau_0 \subt \lptr{rv}{0}) \wedge (\lptr{rv}{8} \subt \tau_1))$. This describes both the pointer structure indexing behavior and the integer behavior simultaneously. Later, when trying to solve the constraints, we will have to select one of these behaviors. In the actual system, we also must cope with the possibility that $8$ is an array index, so we add yet another constraint to the disjunction.
+One example of a simple constraint generation would be for a multiplication. If we have the a fragment of code in the IL $X_1:64 = X_0:64 * 3$, we are dealing with the simpler case of a non-intersecting expression. We know the exact bit-width of $X_0$ and $X_1$ from the lifting process. Assuming that $X_0$ and $X_1$ correspond to the type variables $\tau_0$ and $\tau_1$ respectively, we would generate the constraint $(\tau_0 \subt \tint{64}) \wedge (\tint{64} \subt \tau_1)$. Note that these constraints are only one-sided subtypings. $X_0$ is only constrained to be usable as an integer. For all we know $X_0$ could have been a pointer, and this would still be legal. $X_1$ on the other hand must be definable by an integer. As a result, if $X_1$ is later dereferenced, the system will find this to be inconsistent. In a slightly more complex example, we examine $Y_1:64 = Y_0:64 + 8$ in a system with 64-bit pointers. In this case, this statement needs to generate two possibilities --- one assuming that addition is an operation over integers, and one assuming the addition describes pointer arithmetic. Assuming type variables similar to previous example, we end up with a constraint $((\tau_0 \subt \tint{64}) \wedge (\tint{64} \subt \tau_1)) \vee ((\tau_0 \subt \lptr{rv}{0}) \wedge (\lptr{rv}{8} \subt \tau_1))$. This describes both the pointer structure indexing behavior and the integer behavior simultaneously. Later, when trying to solve the constraints, we will have to select one of these behaviors. In the actual system, we also must cope with the possibility that $8$ is an array index, so we add yet another constraint to the disjunction.
 
 \subsection{Unification}
 Unification is the process of coming up with a valid substitution for a set of type variables such that the substituted system will satisfy some set of constraints. Normally, these are only equality constraints. However, in our system we are simultaneously solving regular unification constraints and subtyping constraints to come up with a substitution for each type variable that will satisfy not only the equality constraints, but also the subtype ranges. In order to do this, we maintain a context that tracks which constraints we have absorbed, maintains a simplified form of constraints, and allows for efficient checking of whether the context is still consistent.
@@ -100,17 +100,17 @@ In situations where the constraints are not simultaneously satisfiable, this goa
 
 % Strategy
 First, we sort the constraints by the number of disjunctive clauses. This means that in the case where the constraints are satisfiable, the solver processes the non-branching constraints first. This is both positive from a search perspective (early decisions are less likely to be wrong), and from a domain specific perspective, as pointer reads and writes are of this form. Processing pointer reads and writes early means that incorrect choices for pointer arithmetic are likely to fail immediately.
-Then, for every constraint, we process each disjunction into a separate possible context. We then score each context with a triple of the number of constraints possibly satisfied, the number of constraints already satisfied, and a tiebreaker value.
-In each of the constraints, the disjunction's ordering matches how probable the interpretation is. For example, doing array indexing by a constant is less likely than doing struct indexing by a constant. The tiebreaker is based on the combined likelihood of each disjunction choice in a vacuum. At each step, we take the current context under examination, grab its next constraint, then for each choice, or the choice of dropping the constraint, generate the possible next steps, and place them into a heap. The sorting order for the heap is first by constraints already processed (to avoid backtracking when we do not need to), then by possible constraints to solve (to ensure we will search for the best solution first), and finally by the tiebreaker, to prefer constraint choices that are more likely a priori.
+Then, for every constraint, we process each disjunction into a separate possible context. We then score each context with a triple of the number of constraints possibly satisfied, the number of constraints already satisfied, and a tie-breaker value.
+In each of the constraints, the disjunction ordering matches how probable the interpretation is. For example, doing array indexing by a constant is less likely than doing struct indexing by a constant. The tie breaker is based on the combined likelihood of each disjunction choice in a vacuum. At each step, we take the current context under examination, grab its next constraint, then for each choice, or the choice of dropping the constraint, generate the possible next steps, and place them into a heap. The sorting order for the heap is first by constraints already processed (to avoid backtracking when we do not need to), then by possible constraints to solve (to ensure we will search for the best solution first), and finally by the tie breaker, to prefer constraint choices that are more likely a priori.
 
 % Datalog link
 Searching for a minimum number of dropped constraints again informs Holmes design.
-Enabling the arbitrary dropping of constraints in a datalog representation would result in a huge intermediate state.
+Enabling the arbitrary dropping of constraints in a Datalog representation would result in a huge intermediate state.
 Even if only one constraint need be dropped, a program written in this way would compute the potential dropping of every possible constraint, resulting in an enormous set of facts.
-In order to make this more practical, we would either need to introduce control flow primitives (such as Prolog's cut) or some form of nonmonotonic reasoning.
-Assuming no explicit control flow primitives, nonmonotonic reasoning is required because adding a new arm to a disjunctive constraint would add a fact, but possibly \emph{reduce} the number of facts which a correctly designed system would derive due to decreasing the number of constraints which need to be dropped.
+In order to make this more practical, we would either need to introduce control flow primitives (such as Prolog's cut) or some form of non-monotonic reasoning.
+Assuming no explicit control flow primitives, non-monotonic reasoning is required because adding a new arm to a disjunctive constraint would add a fact, but possibly \emph{reduce} the number of facts which a correctly designed system would derive due to decreasing the number of constraints which need to be dropped.
 
-This form of nonmonotonicity can be represented by circumscription in combination with the call/cc feature.
+This form of non-monotonicity can be represented by circumscription in combination with the call/cc feature.
 A maximum number of dropped constraints can be considered under a closed world hypothesis (circumscription), making an assumption that more constraints do not need to be dropped.
 Then, if for a given number of maximum dropped constraints, it can be determined that no complete solution can be generated, the maximum number of dropped constraints can be increased (call/cc), retracting the insolubility assertion in the process.
 
@@ -118,6 +118,6 @@ Then, if for a given number of maximum dropped constraints, it can be determined
 \subsection{Limitations}
 \bitr\ does not implement every possible type, or understand every form of invariant. For example, \bitr\ does not know how to deal with union types, even if a tag indicates which type the variable is. We could extend to deal with such types, but doing so would make the system a good deal more complicated, and move from being only dataflow dependent to being control flow dependent as well. Additionally, \bitr\ does not analyze value bounds on types, as one might expect from an enumeration type or an array index. Adding this form of analysis would require more detailed understanding of the numeric operation, and would require analysis resembling VSA\cite{vsa}.
 
-Another issue is in the use of functions with variable arity. In order to do interprocedural analysis, \bitr\ matches the input and output registers together for unification. However, without separate instantiation of the function at each call site, the varargs portions of the function's input stack will not match across usage of the functions. If functions were separately instantiated however, information from each call site would not propagate to another. It would be possible to write code that special cased the varargs on x86 calling convention, but this is specialization and future work.
+Another issue is in the use of functions with variable arity. In order to do inter-procedural analysis, \bitr\ matches the input and output registers together for unification. However, without separate instantiation of the function at each call site, the varargs portions of the function's input stack will not match across usage of the functions. If functions were separately instantiated however, information from each call site would not propagate to another. It would be possible to write code that special cased the varargs on x86 calling convention, but this is specialization and future work.
 
 Finally, the more inconsistent the program, the longer the system will take to recover the types. Especially nonsensical programs can take quite long as the system attempts to optimize for the fewest number of broken constraints.
