--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -59,14 +59,14 @@
 %\approvalpage
 
 \pagestyle{plain}
-\section*{Acknowledgements}
+\section*{Acknowledgments}
 \setcounter{page}{3}
 % Must contain:
 % Advisor
 % Members of committee
 % Funding sources
 This thesis work was advised by David Brumley.
-Other members of the committee include Frank Pfenning (CMU CS), Maunel Egele (BU ECE), and Lujo Bauer (CMU ECE).
+Other members of the committee include Frank Pfenning (CMU CS), Manuel Egele (BU ECE), and Lujo Bauer (CMU ECE).
 
 This work was funded by DARPA award N660011324040 and NSF award DGE1419362.
 The views and opinions of authors expressed herein do not necessarily state or reflect those of the United States Government or any agency thereof.
